<resources>
    <string name="app_name">rescYou Admin</string>

    <!--Starting Page-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_email">Sign In Via Email</string>
    <string name="sign_in_gmail">Sign In Via Gmail</string>
    <string name="sign_in">Sign In</string>

    <string name="tech_image">Tech Life Vector</string>
    <string name="join_community">Join our community.</string>
    <string name="thankyou_services">Thank you for using our services.</string>

    <!--Sign Up Page-->
    <!--Personal Details:REQUIRED-->
    <string name="personal_details">Personal Details</string>
    <string name="first_name_req">First Name <font color='#FF0000'>*</font></string>
    <string name="middle_name_req">Middle Name</string>
    <string name="last_name_req">Last Name <font color='#FF0000'>*</font></string>
    <string name="suffix_name_req">Suffix</string>
    <string name="birthday_req">Birthday <font color='#FF0000'>*</font></string>

    <!--Personal Details-->
    <string name="first_name">First Name </string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name </string>
    <string name="suffix_name">Suffix</string>
    <string name="birthday">Birthday </string>

    <!--Account Details-->
    <string name="account_details">Account Details</string>
    <string name="bqrt_id">BQRT ID</string>


    <!--Terms and Conditions-->
    <string name="termsAndCondTitle">Terms and Conditions</string>
    <string name="termsAndConditions">By signing up, you agree to our terms and conditions.</string>
    <string name="continue_button">Continue</string>
    <string name="back">Back</string>
    <string name="accept">I accept and agree to the Terms and Conditions.</string>


    <!--Sign In EMAIL Page-->
    <string name="welcome">Welcome Back</string>

    <!--Sign In EMAIL Page:REQUIRED-->
    <string name="email_req">Email <font color='#FF0000'>*</font></string>
    <string name="password_req">Password <font color='#FF0000'>*</font></string>
    <string name="bqrt_id_req">BQRT ID<font color='#FF0000'>*</font></string>

    <string name="email">Email</string>
    <string name="password">Password </string>


    <!--Forgot Password Page-->
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter your email to reset your password.</string>
    <string name="reset_password">Reset Password</string>

    <!--Verify OTP Page-->
    <string name="verify_OTP">OTP Verification</string>
    <string name="send_OTP">We will send you an One Time Password (OTP) on this mobile number.</string>
    <string name="country_code">+63</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="get_OTP">Get OTP</string>

    <!--Send OTP Page-->
    <string name="entry_OTP">Enter the OTP sent to:</string>
    <string name="OTP">One Time Password (OTP)</string>
    <string name="didnt_getOTP">Didn\'t receive the OTP?</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">Verify OTP</string>


    <!--Home-->

    <!--Nav Bar-->
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="info">Information</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>

    <!--Pin my location button-->
    <string name="pin_location">Pin My Location</string>
    <string name="describe">Describe your current situation.</string>
    <string name="cancel_pin">Cancel</string>

    <string name="rate_situation">Rate your current situation.</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="critical">Critical</string>
    <string name="catastrophic">Catastrophic</string>

    <string name="type_disaster">Type of Disaster</string>

    <string name="sitio">Enter the Sitio you are in</string>

    <string name="take_photo">Take a Photo</string>
    <string name="add_photo">Add Photos</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!--Profile-->
    <string name="sign_out">Sign Out</string>

    <!--Tools-->
    <string name="flashlight">Flashlight</string>
    <string name="whistle">Whistle</string>
    <string name="compass">Compass</string>

    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>

    <string name="play">PLAY</string>
    <string name="open">OPEN</string>

    <!--Information-->
    <string name="preparedness_tips">Preparedness Tips</string>
    <string name="hotlines">Hotlines</string>
    <string name="evacuation_centers">Evacuation Centers</string>

    <string name="view">VIEW</string>

    <!--Preparedness Tips-->

    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="typhoon">Typhoon</string>
    <string name="flood">Flood</string>
    <string name="landslide">Landslide</string>
    <string name="volcanic">Volcanic Eruption</string>

    <string name="source">Sources</string>
    <string name="image_source">Image:</string>
    <string name="article_source">Article:</string>


    <!--View Pins-->
    <string name="view_pin">View Pin</string>
    <string name="send_help">Send Help</string>

    <string name="pinned_by">Pinned by:</string>
    <string name="pinned_by_name">Unknown</string>

    <string name="send_help_name">No one is sending help yet.</string>

    <string name="ratings_current_situation">Ratings of Current Situation:</string>
    <string name="current_situation">Current Situation:</string>
    <string name="situation">Happy</string>

    <string name="your_sitio">Current Sitio:</string>


    <!--My Pin-->
    <string name="my_pin">My Pin</string>

    <string name="resolved">Resolved</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="msg_token_fmt">hello</string>


    <!--REPORTS-->
    <string name="view_allpins">View All Pins </string>
    <string name="resolved_pins">Resolved Pins </string>
    <string name="per_sitio">Per Sitio (Total) </string>
    <string name="per_disaster">Per Disaster Categories (Total) </string>
    <string name="summary">Summary </string>


    <!--Evacuation Centers-->
    <string name="address">Address</string>
    <string name="in_charge">In-Charge</string>
    <string name="occupant_s">Occupant/s</string>
    <string name="contact_number">Contact Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="search_for_a_place">Search for a place...</string>
    <string name="available">Available</string>
    <string name="add_evacuation_center">Add Evacuation Center</string>
    <string name="add_new">Add New</string>


    <!--Resolving Pin-->
    <string name="rescued_by">Rescued by:</string>
    <string name="ratings_situation">Ratings of the situation:</string>
    <string name="disaster">Type of disaster:</string>
    <string name="current_sitio">Sitio:</string>
    <string name="current_desc">Description:</string>


    <!--SUMMARY-->

    <string name="all_pins">All Pins</string>

    <!--    Terms and Conditons Content-->

    <string name="termsAncConditions_content">
Please read these terms and conditions carefully before using the rescYOU operated by Group 6 ("we," "us," or "our"). By downloading, installing, or using the App, you agree to be bound by these terms and conditions. If you do not agree to these terms, please do not use the App.
\n\n\n
1. Acceptance of Terms
\n\n
1.1. By using the App, you agree to comply with these Terms and Conditions, our Privacy Policy, and any other policies and guidelines provided within the App.
\n\n
2. Use of the App
\n\n
2.1. The App is intended for users who require assistance in emergency situations. It provides tools and resources to connect users with rescue services, but it does not guarantee response times or the availability of such services.
\n\n
2.2. You must use the App responsibly and only in genuine emergency situations. False alarms or misuse of the App may result in legal action.
\n\n
2.3. Users are liable and responsible for the accuracy of the emergencies reported when creating a PIN. If an emergency has been proven false or fake, users will be held responsible for the consequences.
\n\n
3. Account Registration
\n\n
3.1. To use certain features of the App, you may be required to create an account. You agree to provide accurate, current, and complete information during the registration process.
\n\n
3.2. You are responsible for maintaining the confidentiality of your account login credentials and for any activities that occur under your account.
\n\n
4. Privacy
\n\n
4.1. Our Privacy Policy explains how we collect, use, and disclose your personal information. By using the App, you consent to the collection and use of your data as described in the Privacy Policy.
\n\n
5. Prohibited Conduct
\n\n
5.1. Using the App for any illegal or unauthorized purposes is strictly prohibited.
\n\n
5.2. Modifying, adapting, or attempting to hack the App is not allowed.
\n\n
5.3. Intentionally interfering with or disrupting the operation of the App or its servers is prohibited.
\n\n
5.4. Attempting to gain unauthorized access to any part of the App or its related systems is strictly prohibited.
\n\n
5.5. Sharing your account or login information with others is not allowed.
\n\n
6. Disclaimers
\n\n
6.1. The App is provided "as is" and "as available," without any warranties, express or implied. We do not guarantee the availability, accuracy, or reliability of the App.
\n\n
6.2. We are not responsible for the actions, response times, or conduct of emergency services or third-party service providers.
\n\n
7. Limitation of Liability
\n\n
7.1. To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, arising out of or related to your use of the App.
\n\n
8. Termination
\n\n
8.1. We reserve the right to terminate or suspend your access to the App at our discretion, without prior notice, for any reason, including but not limited to a violation of these Terms and Conditions.
\n\n
9. Governing Law
\n\n
9.1. These Terms and Conditions shall be governed by and construed in accordance with the laws of the Philippines, without regard to its conflict of law principles.
\n\n
10. Changes to Terms
\n\n
10.1. We may update these Terms and Conditions from time to time. Any changes will be posted within the App, and your continued use of the App after such changes will constitute your acceptance of the revised terms.
\n\n
11. Contact Us
\n\n
11.1. If you have any questions or concerns about these Terms and Conditions, please contact us at rescyou.6@gmail.com
\n\n
11.2. This application was developed and operated by Group 6 in Sto. Tomas City, Batangas as part of a capstone project.

</string>



</resources>